# exquisite-corpus

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
data/: canon.csv
src/exquisite_corpus/: cli.py  corpus.py
